manager: add support for --version command line parameter
This adds the Unix/Linux traditional commmand line argument "--version"
so that it is possible to retrieve the version of the binary.

Example output:
/usr/bin/manager (everest-framework 0.10.1)

Signed-off-by: Michael Heimpold <michael.heimpold@chargebyte.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,14 @@
+# make some cmake variables available as defines
+configure_file(cmake-vars.h.in cmake-vars.h @ONLY)
+
 add_executable(manager)
 target_sources(manager
     PRIVATE
         system_unix.cpp
         manager.cpp
 )
+
+target_include_directories(manager PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 
 target_link_libraries(manager
     PRIVATE
